Sat Apr 20 02:09:46 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl_ssl.c: Correct shutdown behavior w.r.t GC.

	* test/openssl/test_ssl.rb: Add tests to verify correct behavior.

	[Bug #8240] Patch provided by Shugo Maeda. Thanks!

Sat Apr 20 01:56:32 2013  Yuki Yugui Sonoda  <yugui@google.com>

	* thread_pthread.c (ruby_init_stack): Avoid using uninitialized value.
	  stackaddr and size are not set if get_stack() fails.

Sat Apr 20 01:47:31 2013  Yuki Yugui Sonoda  <yugui@google.com>

	* thread_pthread.c: Fixes wrong scopes of #if USE_SLEEPY_TIMER_THREAD
	  .. #endif sections.  This fixes a build error on NativeClient.

Sat Apr 20 01:31:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* Merge Onigmo 5.13.4 f22cf2e566712cace60d17f84d63119d7c5764ee.
	  [bug] fix problem with optimization of \z (Issue #16) [Bug #8210]

Sat Apr 20 01:18:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): non-symbol key is not
	  a keyword argument, keep it as a positional argument.

Sat Apr 20 01:14:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_synchronize_m): yield no block params.  patch by
	  splattael (Peter Suschlik) in [ruby-core:53773] [Bug #8097].
	  fix GH-266.

Sat Apr 20 00:41:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): append keyword hash to argument array
	  to splat if needed.  [ruby-core:54094] [Bug #8236]

Sat Apr 20 00:31:57 2013  Kouhei Sutou  <kou@cozmixng.org>

	* README.EXT.ja (Data_Wrap_Struct): Remove a description about
	  orphan argument. Oh, I renamed the argument name without
	  changing description at r36180... Sorry....
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]
	* README.EXT.ja (Data_Make_Struct): Add a sample code that describes
	  how it works.
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]

Tue Apr 16 01:30:47 2013  Kenta Murata  <mrkn@mrkn.jp>
